tests/lex-fail/float_missing_frac_eof.fl.0.exp
Error: float_missing_frac_eof.fl(1,1): Missing fractional part of floating point literal
123.
^    
